compiler/framework/test/fail/for_without_body.cvc
// For-loop needs two or three arguments.


export int main() {
    for (int i = 0, 5);

    return 0;
}
